Example with process manager

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,7 +3,8 @@
   "files.associations": {
     "process_manager.h": "c",
     "freertos.h": "c",
-    "cstdint": "c"
+    "cstdint": "c",
+    "motor_core_interface.h": "c"
   },
   "idf.adapterTargetName": "esp32"
 }
