Agregando cálculos para el sentido de giro y ángulo

--- a/components/movement_planner/CMakeLists.txt
+++ b/components/movement_planner/CMakeLists.txt
@@ -4,9 +4,11 @@ idf_component_register(
     "linkedlist/linkedlist.c"
     "pqueue/pqueue.c"
     "queue/queue.c"
+    "algebra/algebra.c"
 
     INCLUDE_DIRS "."
     "./darr"
     "./linkedlist"
     "./pqueue"
-    "./queue")
+    "./queue"
+    "./algebra")
