--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,7 +7,8 @@
     "motor_core_interface.h": "c",
     "movement_planner.h": "c",
     "cmath": "c",
-    "complex": "c"
+    "complex": "c",
+    "algebra.h": "c"
   },
   "idf.adapterTargetName": "esp32"
 }
